#18075 closed bug (fixed)

PANIC: module bus_managers/pci/x86/v1 has no reference on MacBook Air 2011

Reported by: Nexus-6 Owned by: mmlr
Priority: normal Milestone: R1/beta4
Component: Drivers/USB/UHCI Version: R1/Development
Keywords: Cc: korli
Blocked By: Blocking:
Platform: All

Description

hrev56471 is the last build working on this MacBook (11" late 2011, Core i5-2467M with 4Gb RAM). I have recently come across it while testing Beta4 as I have not turned it on for a while, probably I updated it and never rebooted until now. It appears that this regression is there since whichever hrev came next, found its way up to Beta4 but no one reported it. Please find attached syslog, listdev and screenshot.

Attachments (4)

syslog.old (512.0 KB ) - added by Nexus-6 18 months ago.
syslog (135.8 KB ) - added by Nexus-6 18 months ago.
listdev.txt (3.9 KB ) - added by Nexus-6 18 months ago.
A2060552-33B5-46E0-B796-EEEB052DB5F7.jpeg (3.5 MB ) - added by Nexus-6 18 months ago.
Kernel panic screenshot

Change History (7)

by Nexus-6, 18 months ago

Attachment: syslog.old added

by Nexus-6, 18 months ago

Attachment: syslog added

by Nexus-6, 18 months ago

Attachment: listdev.txt added

by Nexus-6, 18 months ago

Kernel panic screenshot

comment:1 by waddlesplash, 18 months ago

Cc: korli added
Component: - GeneralDrivers/USB/UHCI
Owner: changed from nobody to mmlr

Likely the UHCI driver is dereferencing the PCI bus when it shouldn't.

comment:2 by korli, 18 months ago

Looks like the module isn't correctly acquired/released.

I reoriented the xhci change with this, as it now fixes the boot issue on xhci on my swift SF114-34 https://review.haiku-os.org/c/haiku/+/5822

comment:3 by waddlesplash, 18 months ago

Milestone: UnscheduledR1/beta4
Resolution: fixed
Status: newclosed

Fix merged in hrev56599 (and cherry-picked to beta4)

Note: See TracTickets for help on using tickets.