usb: fix references on the module B_PCI_X86_MODULE_NAME

the dependency is optional, only the device modules depend on it.
should fix #18075

Change-Id: Ifddb9814ff5ff59ee7d80d06b14ba9fded04cd56
Reviewed-on: https://review.haiku-os.org/c/haiku/+/5822
Reviewed-by: waddlesplash <waddlesplash@gmail.com>
(cherry picked from commit d2875e7b28685be82cb9a98a4cab442e1dd4add8)
Reviewed-on: https://review.haiku-os.org/c/haiku/+/5793